@@ -1,3 +1,10 @@
+2003-03-02  Ryan T. Sammartino  <ryants@shaw.ca>
+
+	* www/new/index.php: valid XHTML 1.0 Transitional.
+
+	* www/include/languages/Base.tab(newe:notes_changes): use
+	&amp; instead of just &.
+
 2003-03-01  Ryan T. Sammartino  <ryants@shaw.ca>
 
 	Bug #229
